# ezUI

./: .gitignore  .gitmodules  CMakeLists.txt  ezUI.sln
SandBox/: SandBox.vcxproj  SandBox.vcxproj.filters
SandBox/src/: SandBox.cpp
UnitTests/: HandleStore.cpp  SparseArray.cpp  UnitTests.vcxproj  UnitTests.vcxproj.filters
examples/: CMakeLists.txt
examples/sandbox/: CMakeLists.txt
examples/sandbox/src/: SandBox.cpp
ezUI/: CMakeLists.txt  ezUI.vcxproj  ezUI.vcxproj.filters
ezUI/src/: ezUI.h
ezUI/src/Core/: Base.cpp  Base.h  GFXApp.h  HandleStore.h  StrongHandle.h  UIApp.cpp  UIApp.h
ezUI/src/Debug/: Profiling.cpp  Profiling.h
ezUI/src/Graphics/: BuiltinShader.h  DeviceResources.h  ManagedBuffer.h  RenderAPI.cpp  RenderAPI.h  Renderer2D.cpp  Renderer2D.h
ezUI/src/Platform/OpenGL/: OpenGLAPI.cpp  OpenGLAPI.h
ezUI/src/UI/: Scene.h
ezUI/src/Utility/: Profiling.cpp  Profiling.h  StrongHandle.h
ezUI/src/ez/: ez.h  ez.hpp
ezUI/src/ez/Core/: Base.cpp  Base.h  Base.hpp  GFXApp.cpp  Logger.cpp  Logger.hpp  Profiling.cpp  Profiling.h  Profiling.hpp  StrongHandle.h  StrongHandle.hpp  UIApp.cpp  UIApp.h  UIApp.hpp
ezUI/src/ez/Graphics/API/: DeviceResources.h  DeviceResources.hpp  Enums.hpp  RenderAPI.cpp  RenderAPI.h  RenderAPI.hpp  Shader.hpp  StreamStorage.hpp  TextureArray.hpp
ezUI/src/ez/Graphics/API/OpenGL/: GL_API.cpp  GL_API.h  GL_API.hpp  GL_BuiltinShader.h  GL_BuiltinShader.hpp  GL_DebugOutput.cpp  GL_DebugOutput.h  GL_DebugOutput.hpp  GL_MappedStreamBuffer.cpp  GL_MappedStreamBuffer.h  GL_MappedStreamBuffer.hpp  GL_Shader.cpp  GL_Shader.h  GL_Shader.hpp  GL_TextureArray.cpp  GL_TextureArray.h  GL_TextureArray.hpp
ezUI/src/ez/Graphics/Renderer/: Color.cpp  Color.hpp  Font.cpp  Font.h  Font.hpp  ManagedBuffer.h  Renderer2D.cpp  Renderer2D.h  Renderer2D.hpp
ezUI/src/ez/Graphics/UI/: Scene.h  Scene.hpp
x64/Debug/: UnitTests.exp  UnitTests.lib
